retry button not showing fix
whoopsie i didn't know it was case sensitive

--- a/main.css
+++ b/main.css
@@ -178,7 +178,7 @@ body{
 }
 
 .main-button{
-    background: url(images/retbtn.bmp);
+    background: url(images/RETBTN.bmp);
     border: none;
     width: 150px;
     height: 36px;
